심현우 2018 09 05 main 단 최종본

--- a/UnderWear/src/main/webapp/resources/main.html
+++ b/UnderWear/src/main/webapp/resources/main.html
@@ -55,7 +55,7 @@
                     <a class="nav-link link text-black display-4" href="http://localhost:8080/">Join us</a>
                 </li></ul>
           <!--   <div class="navbar-buttons mbr-section-btn"> 버튼 제어 찾아야함 버튼 
-          	  <a class="btn btn-sm btn-primary display-4" href="http://localhost:8080/">
+          	  <a class="btn btn\-sm btn-primary display-4" href="http://localhost:8080/">
           	  <span class="mbri-home mbr-iconfont mbr-iconfont-btn">
           	  </span></a>
             </div> -->
@@ -76,7 +76,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">2018/2019 New F/W Collection Arrival Now&nbsp;</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="#">Man</a> 
-                    <a class="btn btn-md btn-white-outline display-4" href="/resources/mainClient.html">Main&nbsp;</a
+                    <a class="btn btn-md btn-white-outline display-4" href="http://localhost:8080/">Main&nbsp;</a
                     > <a class="btn btn-md btn-secondary display-4" href="#">Woman</a></div>
             </div>
         </div>
