--- a/UnderWear/src/main/webapp/resources/test.html
+++ b/UnderWear/src/main/webapp/resources/test.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="UTF-8">
-      <title>글쓰기</title>
+      <title>관리자 로그인</title>
       
       <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
          <!-- 브라우저의 호환성 보기 모드를 막고, 해당 브라우저에서 지원하는 가장 최신 버전의 방식으로 HTML 보여 주도록 설정. -->
@@ -17,7 +17,7 @@
         
         <!-- IE8이하 브라우저에서 HTML5를 인식하기 위해서는 아래의 패스필터를 적용하면 된다. -->
         <!-- [if it IE 9] > <script src="../jshtml5shiv.js"></script> [endif] -->
-      	<script type="text/javascript">location.href="/product/productList.do"</script>
+      	<script type="text/javascript">location.href="/admin/login/adminlogin.do"</script>
    </head>
       <body>
          <a href=""></a>
